fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,10 +29,14 @@ ul li {
   list-style: none;
 }
 
-html,
-body {
+html, body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   color: #ffffff;
 }
@@ -45,9 +49,9 @@ body {
 }
 
 .container {
-  max-width: 1920px;
+  width: 100%;
   height: 100vh;
-  margin: 0 auto;
+  margin: 0;
   position: relative;
   background-color: #181818;
 }
